# deputydev-auth

./: CONTRIBUTING.md  Dockerfile  README.md  config_template.json  pyproject.toml
.github/workflows/: code_quality.yaml
app/: listeners.py  service.py
app/apm/: apm.py
app/caches/: base.py
app/caches/auth_token_cache/: auth_token_grace_period_cache.py
app/clients/supabase/: client.py
app/common/dataclasses/: main.py
app/common/exception/: exception.py
app/dataclasses/: main.py
app/listeners/: __init__.py  base.py  base_listener.py  redis_listener.py  tortoise_listener.py
app/models/: __init__.py  base.py
app/models/dao/postgres/: __init__.py  base.py  teams.py  users.py
app/models/dto/: subscriptions_dto.py
app/repository/referral_codes/: referral_codes_repository.py
app/repository/subscriptions/: subscriptions_repository.py
app/repository/user_teams/: user_team_repository.py
app/repository/users/: user_repository.py
app/routes/: __init__.py  auth.py  ping.py  service_health_checker.py
app/sentry/: sentry.py
app/services/: auth_factory.py  base_auth.py  pong.py
app/services/auth/: auth_factory.py  base_auth.py
app/services/auth/fake_auth/: fake_auth.py
app/services/fake_auth/: fake_auth.py
app/services/signup/: signup_service.py
app/services/supabase/: client.py  supabase_auth.py
app/utils/: authenticate.py  config_manager.py  encryption.py  session_encryption_service.py
app/utils/caches/: auth_token_grace_period_cache.py  base.py
db/migrations/: 20240913091550_create_subscriptions.sql
(+2 files in other folders)
