[project]
name = "deputydev-auth"
version = "1.0.0"
description = ""
authors = [{ name = "DeputyDev Team", email = "team@deputydev.com" }]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "tortoise-orm",
  "asyncpg",
  "rich",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff==0.12.4",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
